Fix T91093: off by one error in when resampling curve

The bug existed in the Curve Resample and Curve to Points node.

Differential Revision: https://developer.blender.org/D12416